[gd_scene load_steps=4 format=3 uid="uid://bdk4y6k8373jy"]

[ext_resource type="PackedScene" uid="uid://6yeuqtmkknhh" path="res://resources/3d_asset/models/EnergyBar.glb" id="1_y7sme"]
[ext_resource type="Script" path="res://scripts/combat/energy_bar.gd" id="2_461on"]
[ext_resource type="Material" uid="uid://bqjl6mrncx7g5" path="res://resources/3d_asset/materials/energy_empty.tres" id="2_ouic2"]

[node name="EnergyBar" instance=ExtResource("1_y7sme")]
script = ExtResource("2_461on")

[node name="Structure" parent="." index="0"]
cast_shadow = 0

[node name="Barre5" parent="." index="1"]
cast_shadow = 0
surface_material_override/0 = ExtResource("2_ouic2")

[node name="Barre1" parent="." index="2"]
cast_shadow = 0
surface_material_override/0 = ExtResource("2_ouic2")

[node name="Barre2" parent="." index="3"]
cast_shadow = 0
surface_material_override/0 = ExtResource("2_ouic2")

[node name="Barre3" parent="." index="4"]
cast_shadow = 0
surface_material_override/0 = ExtResource("2_ouic2")

[node name="Barre4" parent="." index="5"]
cast_shadow = 0
surface_material_override/0 = ExtResource("2_ouic2")

[node name="Ring1" parent="." index="6"]
cast_shadow = 0

[node name="Ring2" parent="." index="7"]
cast_shadow = 0

[node name="Ring3" parent="." index="8"]
cast_shadow = 0

[node name="Ring4" parent="." index="9"]
cast_shadow = 0

[node name="Ligne" parent="." index="10"]
cast_shadow = 0

[node name="EnergyUpdateTimer" type="Timer" parent="." index="11"]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="EnergyUpdateTimer" to="." method="_update_display"]
